export const snapshot = {};

snapshot[`is.OptionalOf<T> > returns properly named function 1`] = `"isOptionalOf(isNumber)"`;

snapshot[`is.OptionalOf<T> > returns properly named function 2`] = `"isOptionalOf(isNumber)"`;

snapshot[`is.UnwrapOptionalOf<T> > returns properly named function 1`] = `"isNumber"`;

snapshot[`is.UnwrapOptionalOf<T> > returns properly named function 2`] = `"isNumber"`;

snapshot[`is.UnwrapOptionalOf<T> > returns properly named function 3`] = `"isNumber"`;

snapshot[`is.ReadonlyOf<T> > returns properly named function 1`] = `"isReadonlyOf(isNumber)"`;

snapshot[`is.ReadonlyOf<T> > returns properly named function 2`] = `"isReadonlyOf(isReadonlyOf(isNumber))"`;

snapshot[`is.UnwrapReadonlyOf<T> > returns properly named function 1`] = `"isNumber"`;

snapshot[`is.UnwrapReadonlyOf<T> > returns properly named function 2`] = `"isReadonlyOf(isNumber)"`;

snapshot[`is.ArrayOf<T> > returns properly named function 1`] = `"isArrayOf(isNumber)"`;

snapshot[`is.ArrayOf<T> > returns properly named function 2`] = `"isArrayOf((anonymous))"`;

snapshot[`is.SetOf<T> > returns properly named function 1`] = `"isSetOf(isNumber)"`;

snapshot[`is.SetOf<T> > returns properly named function 2`] = `"isSetOf((anonymous))"`;

snapshot[`is.TupleOf<T> > returns properly named function 1`] = `
"isTupleOf([
  isNumber,
  isString,
  isBoolean
])"
`;

snapshot[`is.TupleOf<T> > returns properly named function 2`] = `"isTupleOf([(anonymous)])"`;

snapshot[`is.TupleOf<T> > returns properly named function 3`] = `
"isTupleOf([
  isTupleOf([
    isTupleOf([
      isNumber,
      isString,
      isBoolean
    ])
  ])
])"
`;

snapshot[`is.TupleOf<T, E> > returns properly named function 1`] = `
"isTupleOf([
  isNumber,
  isString,
  isBoolean
], isArray)"
`;

snapshot[`is.TupleOf<T, E> > returns properly named function 2`] = `"isTupleOf([(anonymous)], isArrayOf(isString))"`;

snapshot[`is.TupleOf<T, E> > returns properly named function 3`] = `
"isTupleOf([
  isTupleOf([
    isTupleOf([
      isNumber,
      isString,
      isBoolean
    ], isArray)
  ], isArray)
])"
`;

snapshot[`is.ParametersOf<T> > returns properly named function 1`] = `
"isParametersOf([
  isNumber,
  isString,
  isOptionalOf(isBoolean)
])"
`;

snapshot[`is.ParametersOf<T> > returns properly named function 2`] = `"isParametersOf([(anonymous)])"`;

snapshot[`is.ParametersOf<T> > returns properly named function 3`] = `"isParametersOf([])"`;

snapshot[`is.ParametersOf<T> > returns properly named function 4`] = `
"isParametersOf([
  isParametersOf([
    isParametersOf([
      isNumber,
      isString,
      isOptionalOf(isBoolean)
    ])
  ])
])"
`;

snapshot[`is.ParametersOf<T, E> > returns properly named function 1`] = `
"isParametersOf([
  isNumber,
  isString,
  isOptionalOf(isBoolean)
], isArray)"
`;

snapshot[`is.ParametersOf<T, E> > returns properly named function 2`] = `"isParametersOf([(anonymous)], isArrayOf(isString))"`;

snapshot[`is.ParametersOf<T, E> > returns properly named function 3`] = `"isParametersOf([], isArrayOf(isString))"`;

snapshot[`is.ParametersOf<T, E> > returns properly named function 4`] = `
"isParametersOf([
  isParametersOf([
    isParametersOf([
      isNumber,
      isString,
      isOptionalOf(isBoolean)
    ], isArray)
  ], isArray)
])"
`;

snapshot[`is.UniformTupleOf<T> > returns properly named function 1`] = `"isUniformTupleOf(3, isAny)"`;

snapshot[`is.UniformTupleOf<T> > returns properly named function 2`] = `"isUniformTupleOf(3, isNumber)"`;

snapshot[`is.UniformTupleOf<T> > returns properly named function 3`] = `"isUniformTupleOf(3, (anonymous))"`;

snapshot[`is.RecordObjectOf<T> > returns properly named function 1`] = `"isRecordObjectOf(isNumber, undefined)"`;

snapshot[`is.RecordObjectOf<T> > returns properly named function 2`] = `"isRecordObjectOf((anonymous), undefined)"`;

snapshot[`is.RecordObjectOf<T, K> > returns properly named function 1`] = `"isRecordObjectOf(isNumber, isString)"`;

snapshot[`is.RecordObjectOf<T, K> > returns properly named function 2`] = `"isRecordObjectOf((anonymous), isString)"`;

snapshot[`is.RecordOf<T> > returns properly named function 1`] = `"isRecordOf(isNumber, undefined)"`;

snapshot[`is.RecordOf<T> > returns properly named function 2`] = `"isRecordOf((anonymous), undefined)"`;

snapshot[`is.RecordOf<T, K> > returns properly named function 1`] = `"isRecordOf(isNumber, isString)"`;

snapshot[`is.RecordOf<T, K> > returns properly named function 2`] = `"isRecordOf((anonymous), isString)"`;

snapshot[`is.MapOf<T> > returns properly named function 1`] = `"isMapOf(isNumber, undefined)"`;

snapshot[`is.MapOf<T> > returns properly named function 2`] = `"isMapOf((anonymous), undefined)"`;

snapshot[`is.MapOf<T, K> > returns properly named function 1`] = `"isMapOf(isNumber, isString)"`;

snapshot[`is.MapOf<T, K> > returns properly named function 2`] = `"isMapOf((anonymous), isString)"`;

snapshot[`is.ObjectOf<T> > returns properly named function 1`] = `
"isObjectOf({
  a: isNumber,
  b: isString,
  c: isBoolean
})"
`;

snapshot[`is.ObjectOf<T> > returns properly named function 2`] = `"isObjectOf({a: a})"`;

snapshot[`is.ObjectOf<T> > returns properly named function 3`] = `
"isObjectOf({
  a: isObjectOf({
    b: isObjectOf({c: isBoolean})
  })
})"
`;

snapshot[`is.StrictOf<T> > returns properly named function 1`] = `
"isStrictOf(isObjectOf({
  a: isNumber,
  b: isString,
  c: isBoolean
}))"
`;

snapshot[`is.StrictOf<T> > returns properly named function 2`] = `"isStrictOf(isObjectOf({a: a}))"`;

snapshot[`is.StrictOf<T> > returns properly named function 3`] = `
"isStrictOf(isObjectOf({
  a: isStrictOf(isObjectOf({
    b: isStrictOf(isObjectOf({c: isBoolean}))
  }))
}))"
`;

snapshot[`is.InstanceOf<T> > returns properly named function 1`] = `"isInstanceOf(Date)"`;

snapshot[`is.InstanceOf<T> > returns properly named function 2`] = `"isInstanceOf((anonymous))"`;

snapshot[`is.LiteralOf<T> > returns properly named function 1`] = `'isLiteralOf("hello")'`;

snapshot[`is.LiteralOf<T> > returns properly named function 2`] = `"isLiteralOf(100)"`;

snapshot[`is.LiteralOf<T> > returns properly named function 3`] = `"isLiteralOf(100n)"`;

snapshot[`is.LiteralOf<T> > returns properly named function 4`] = `"isLiteralOf(true)"`;

snapshot[`is.LiteralOf<T> > returns properly named function 5`] = `"isLiteralOf(null)"`;

snapshot[`is.LiteralOf<T> > returns properly named function 6`] = `"isLiteralOf(undefined)"`;

snapshot[`is.LiteralOf<T> > returns properly named function 7`] = `"isLiteralOf(Symbol(asdf))"`;

snapshot[`is.LiteralOneOf<T> > returns properly named function 1`] = `'isLiteralOneOf(["hello", "world"])'`;

snapshot[`is.UnionOf<T> > returns properly named function 1`] = `
"isUnionOf([
  isNumber,
  isString,
  isBoolean
])"
`;

snapshot[`is.IntersectionOf<T> > returns properly named function 1`] = `
"isObjectOf({
  a: isNumber,
  b: isString
})"
`;

snapshot[`is.IntersectionOf<T> > returns properly named function 2`] = `"isString"`;

snapshot[`is.IntersectionOf<T> > returns properly named function 3`] = `
"isIntersectionOf([
  isFunction,
  isObjectOf({b: isString})
])"
`;

snapshot[`is.RequiredOf<T> > returns properly named function 1`] = `
"isObjectOf({
  a: isNumber,
  b: isUnionOf([
    isString,
    isUndefined
  ]),
  c: isBoolean
})"
`;

snapshot[`is.RequiredOf<T> > returns properly named function 2`] = `
"isObjectOf({
  a: isNumber,
  b: isUnionOf([
    isString,
    isUndefined
  ]),
  c: isBoolean
})"
`;

snapshot[`is.PartialOf<T> > returns properly named function 1`] = `
"isObjectOf({
  a: isOptionalOf(isNumber),
  b: isOptionalOf(isUnionOf([
    isString,
    isUndefined
  ])),
  c: isOptionalOf(isBoolean)
})"
`;

snapshot[`is.PartialOf<T> > returns properly named function 2`] = `
"isObjectOf({
  a: isOptionalOf(isNumber),
  b: isOptionalOf(isUnionOf([
    isString,
    isUndefined
  ])),
  c: isOptionalOf(isBoolean)
})"
`;

snapshot[`is.PickOf<T, K> > returns properly named function 1`] = `
"isObjectOf({
  a: isNumber,
  c: isBoolean
})"
`;

snapshot[`is.PickOf<T, K> > returns properly named function 2`] = `"isObjectOf({a: isNumber})"`;

snapshot[`is.OmitOf<T, K> > returns properly named function 1`] = `
"isObjectOf({
  a: isNumber,
  c: isBoolean
})"
`;

snapshot[`is.OmitOf<T, K> > returns properly named function 2`] = `"isObjectOf({a: isNumber})"`;
